# chimitheque_back

./: Cargo.toml  README.md  rundevel.sh
casbin/: policy.conf
src/: appstate.rs  constants.rs  errors.rs  handlers.rs  lib.rs  main.rs  utils.rs
src/casbin/: policy.conf
src/handlers/: bookmark.rs  borrowing.rs  entity.rs  fake.rs  person.rs  product.rs  pubchem.rs  searchable.rs  storage.rs  store_location.rs  validate.rs
