[package]
name = "chimitheque_back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = [ "macros" ]}
axum-extra = { version = "0.12.3", features = ["query"] }
axum-oidc = "0.6.0"
# casbin = { version = "2.17.0", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
casbin = { git = "https://github.com/casbin/casbin-rs.git", branch = "copilot/fix-db-connection-in-operator-function",  default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
chrono = "0.4.42"
dotenvy = "0.15"
env_logger = "0.11.8"
governor = "0.10.1"
log = "0.4.28"
tokio = { version = "1.10.0", features = ["fs", "io-util", "rt-multi-thread"] }
tower = "0.5"
tower-sessions = "0.14"
thiserror = "2.0.17"
rusqlite = { version = "0.31.0", features = ["load_extension", "bundled"] }
url = "2.5.7"
http = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"

chimitheque_traits = { path = "../chimitheque_traits" }
chimitheque_utils = { path = "../chimitheque_utils" }
chimitheque_db = { path = "../chimitheque_db" }
chimitheque_types = { path = "../chimitheque_types" }
chimitheque_pubchem = { path = "../chimitheque_pubchem" }
