[package]
name = "chimitheque_back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = [ "macros" ]}
axum-extra = { version = "0.12.3", features = ["query"] }
axum-oidc-layer = "0.1"
base64 = "0.22.1"
casbin = { git = "https://github.com/casbin/casbin-rs.git", branch = "copilot/fix-db-connection-in-operator-function",  default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
chrono = "0.4.42"
dashmap = "6.1.0"
dotenvy = "0.15"
erased-serde = "0.3.31"
governor = "0.10.1"
http = "1.4.0"
jsonwebtoken = {version="10.2.0", features=["rust_crypto"]}
lazy_static = "1.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rand = "0.9.2"
reqwest = { version = "0.13", features = ["json","blocking"] }
rusqlite = { version = "0.31.0", features = ["load_extension", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.10.0", features = ["fs", "io-util", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors","trace"] }
tower-sessions = "0.14"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features=["env-filter"] }
ureq = { version = "3", features = ["json"] }
url = "2.5.7"
urlencoding = "2.1.3"
uuid = "1.19.0"

chimitheque_traits = { path = "../chimitheque_traits" }
chimitheque_utils = { path = "../chimitheque_utils" }
chimitheque_db = { path = "../chimitheque_db" }
chimitheque_types = { path = "../chimitheque_types" }
chimitheque_pubchem = { path = "../chimitheque_pubchem" }
once_cell = "1.21.3"
regex = "1.12.2"
